DAY-10: Connect login authentication and fix CORS